--- a/Cargo.toml
+++ b/Cargo.toml
@@ -8,3 +8,6 @@ description = "Small library for getting the CPU energy consumption from RAPL"
 repository = "https://github.com/JordyAaldering/rapl-energy"
 license = "Apache-2.0"
 readme = "README.md"
+
+[dependencies]
+arrayvec = "0.7.4"
