--- a/rapl-energy-c/Makefile
+++ b/rapl-energy-c/Makefile
@@ -4,3 +4,7 @@ all:
 install:
 	cp ../target/release/librapl_energy_c.a /usr/local/lib/
 	cp rapl_energy_c.h /usr/local/include/
+
+uninstall:
+	rm /usr/local/lib/librapl_energy_c.a
+	rm /usr/local/include/rapl_energy_c.h
