--- a/rapl-energy/Cargo.toml
+++ b/rapl-energy/Cargo.toml
@@ -1,6 +1,6 @@
 [package]
 name = "rapl-energy"
-version = "0.1.3"
+version = "0.1.4"
 edition = "2021"
 categories = ["development-tools::profiling"]
 keywords = ["benchmarking", "energy", "sustainability"]
@@ -11,7 +11,7 @@ readme = "../README.md"
 
 [dependencies]
 erased-serde = "0.4.5"
-serde = "1.0.203"
+serde = { version = "1.0.203", features = ["serde_derive"] }
 
 [dev-dependencies]
 serde_json = "1.0.120"
