--- a/rapl-energy-c/Cargo.toml
+++ b/rapl-energy-c/Cargo.toml
@@ -8,5 +8,5 @@ path = "libc.rs"
 crate-type = ["staticlib"]
 
 [dependencies]
+csv = "1.3.0"
 rapl-energy = { path = "../rapl-energy" }
-serde_json = "1.0.120"
