--- a/rapl-energy/Cargo.toml
+++ b/rapl-energy/Cargo.toml
@@ -9,9 +9,15 @@ repository = "https://github.com/JordyAaldering/rapl-energy"
 license = "Apache-2.0"
 readme = "../README.md"
 
+[features]
+default = ["url"]
+url = ["dep:ureq"]
+
+
 [dependencies]
 erased-serde = "0.4.5"
 serde = { version = "1.0.203", features = ["serde_derive"] }
+ureq = { "2.10.0", optional = true }
 
 [dev-dependencies]
 serde_json = "1.0.120"
