--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,6 +1,23 @@
-[workspace]
-resolver = "2"
-members = [
-    "rapl-energy",
-    "rapl-energy-c",
-]
+[package]
+name = "rapl-energy"
+version = "0.1.8"
+edition = "2021"
+categories = ["development-tools::profiling"]
+keywords = ["benchmarking", "energy", "sustainability"]
+description = "Small library for getting the CPU energy consumption from RAPL"
+repository = "https://github.com/JordyAaldering/rapl-energy"
+license = "Apache-2.0"
+readme = "README.md"
+
+[features]
+default = ["url"]
+url = ["dep:ureq"]
+
+[dependencies]
+csv = "1.3.0"
+erased-serde = "0.4.5"
+serde = { version = "1.0.203", features = ["serde_derive"] }
+ureq = { version = "2.10.0", optional = true }
+
+[build-dependencies]
+cbindgen = "0.26.0"
