--- a/Cargo.toml
+++ b/Cargo.toml
@@ -17,9 +17,7 @@ default = ["url"]
 url = ["dep:ureq"]
 
 [dependencies]
-csv = "1.3.0"
-erased-serde = "0.4.5"
-serde = { version = "1.0.203", features = ["serde_derive"] }
+indexmap = "2.2.6"
 ureq = { version = "2.10.0", optional = true }
 
 [build-dependencies]
