--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -22,6 +22,6 @@ jobs:
       with:
         release_name: Release
         repo_token: ${{ secrets.GITHUB_TOKEN }}
-        file: target/{rapl_energy.h,release/librapl_energy.{a,so}}
+        file: target/release/{rapl_energy.h,librapl_energy.{a,so}}
         file_glob: true
         overwrite: true
