--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,6 +1,6 @@
 [package]
 name = "rapl-energy"
-version = "0.1.10"
+version = "0.1.11"
 edition = "2021"
 categories = ["development-tools::profiling"]
 keywords = ["benchmarking", "energy", "sustainability"]
@@ -14,12 +14,13 @@ crate-type = ["lib", "cdylib"]
 
 [features]
 default = ["nvml", "http"]
-nvml = ["dep:nvml-wrapper"]
+nvml = ["dep:nvml-wrapper", "dep:once_cell"]
 http = ["dep:ureq"]
 
 [dependencies]
 indexmap = "2.2.6"
 nvml-wrapper = { version = "0.10.0", optional = true }
+once_cell = { version = "1.19.0", optional = true }
 ureq = { version = "2.10.0", optional = true }
 
 [build-dependencies]
