--- a/Cargo.toml
+++ b/Cargo.toml
@@ -13,12 +13,14 @@ readme = "README.md"
 crate-type = ["lib", "cdylib"]
 
 [features]
-default = ["nvml", "http"]
-nvml = ["dep:nvml-wrapper", "dep:once_cell"]
+default = ["http", "hwmon", "nvml"]
 http = ["dep:ureq"]
+hwmon = ["dep:libmedium"]
+nvml = ["dep:nvml-wrapper", "dep:once_cell"]
 
 [dependencies]
 indexmap = "2.2.6"
+libmedium = { version = "0.11.0", optional = true }
 nvml-wrapper = { version = "0.10.0", optional = true }
 once_cell = { version = "1.19.0", optional = true }
 ureq = { version = "2.10.0", optional = true }
