--- a/Cargo.toml
+++ b/Cargo.toml
@@ -16,13 +16,13 @@ crate-type = ["lib", "cdylib"]
 default = ["http", "hwmon", "nvml"]
 http = ["dep:ureq"]
 hwmon = ["dep:libmedium"]
-nvml = ["dep:nvml-wrapper", "dep:once_cell"]
+nvml = ["dep:nvml-wrapper"]
 
 [dependencies]
 indexmap = "2.8.0"
 libmedium = { version = "0.12.0", optional = true }
 nvml-wrapper = { version = "0.10.0", optional = true }
-once_cell = { version = "1.21.3", optional = true }
+once_cell = "1.21.3"
 ureq = { version = "3.0.10", optional = true }
 
 [build-dependencies]
